add unread count and title change, changed color

--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -125,7 +125,7 @@ input[type='password'] {
 	color: rgba(255, 255, 255, 0.85);
 	border: none;
 	border-radius: 2px;
-	background-color: #1d74f5;
+	background-color: @link-font-color;
 
 	font-size: 13px;
 	font-weight: 500;
