--- a/src/stylesheets/pages/app.less
+++ b/src/stylesheets/pages/app.less
@@ -1,6 +1,8 @@
 @import './app/sidebar.less';
 @import './app/webview.less';
-
+*{
+	--background: #E05329;
+}
 .app-page {
 	cursor: default;
 	user-select: none;
