--- a/src/stylesheets/variables.less
+++ b/src/stylesheets/variables.less
@@ -1,10 +1,10 @@
-@primary-background-color: #2f343d;
+@primary-background-color: #FFFFFF;
 @secondary-background-color: #F4F4F4;
 @tertiary-background-color: #EAEAEA;
 
-@link-font-color: #008CE3;
+@link-font-color: #E05329;
 
-@primary-font-color: #444444;
+@primary-font-color: #000;
 @secondary-font-color: #7f7f7f;
 @tertiary-font-color: rgba(255, 255, 255, 0.6);
 @quaternary-font-color: rgba(255, 255, 255, 0.85);
