--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -122,10 +122,10 @@ input[type='password'] {
 	word-spacing: 0;
 	text-transform: uppercase;
 
-	color: rgba(255, 255, 255, 0.85);
+	color: #fff;
 	border: none;
 	border-radius: 2px;
-	background-color: @link-font-color;
+	background-color: @color-accent;
 
 	font-size: 13px;
 	font-weight: 500;
