--- a/src/stylesheets/variables.less
+++ b/src/stylesheets/variables.less
@@ -3,6 +3,7 @@
 @tertiary-background-color: #EAEAEA;
 
 @link-font-color: #4C5B66;
+@color-accent: #f9b233;
 
 @primary-font-color: #000;
 @secondary-font-color: #7f7f7f;
