--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -32,6 +32,8 @@ body {
 	font-size: 0.875rem;
 	line-height: 1rem;
 	-webkit-font-smoothing: antialiased;
+	height: 100%;
+	overflow: hidden;
 }
 
 .rocket-h2 {
