--- a/src/stylesheets/pages/app/webview.less
+++ b/src/stylesheets/pages/app/webview.less
@@ -1,10 +1,6 @@
 .webview {
-	position: fixed;
-	z-index: 0;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 68px;
+	width: 100%;
+	height: 100%;
 
 	transition: opacity linear 100ms;
 
