--- a/src/stylesheets/pages/app.less
+++ b/src/stylesheets/pages/app.less
@@ -253,6 +253,9 @@ body.offline .only-offline {
 			background-color: transparent !important;
 			box-shadow: 0 0 0 1000px #f4f4f4 inset;
 		}
+		::placeholder{
+			color: #ccc;
+		}
 	}
 }
 
